--- a/ISFramework.UI/app/panelDemo/template/panelDemo.html
+++ b/ISFramework.UI/app/panelDemo/template/panelDemo.html
@@ -1,1 +1,20 @@
-﻿panel demo content
+﻿<es-panel>
+    <panel-heading>
+        <panel-title>panel Demo</panel-title>
+    </panel-heading>
+    <panel-body>
+        <div class="col-md-5">
+            <es-panel>
+                <panel-heading>
+                    <panel-title>panel title</panel-title>
+                </panel-heading>
+                <panel-body>
+                    panel body
+                </panel-body>
+                <panel-footer>
+                    panel footer
+                </panel-footer>
+            </es-panel>
+        </div>
+    </panel-body>
+</es-panel>
