--- a/ISFramework.UI/app/panelDemo/template/panelDemo.html
+++ b/ISFramework.UI/app/panelDemo/template/panelDemo.html
@@ -4,7 +4,7 @@
     </panel-heading>
     <panel-body>
         <div class="col-md-5">
-            <es-panel>
+            <es-panel panel-loading="panelDemo.x">
                 <panel-heading>
                     <panel-title>panel title</panel-title>
                 </panel-heading>
